--- a/fluctlight-router/templates/view.html
+++ b/fluctlight-router/templates/view.html
@@ -44,7 +44,7 @@
                     <li>{% call pdu_link(room_name, pdu_id) %}</li>
                     {% endfor %}
                     <li>...</li>
-                    {% for pdu_id in room.pdus_by_timestamp.values().rev().take(18) %}
+                    {% for pdu_id in room.pdus_by_timestamp.values().skip(6).rev().take(12).rev() %}
                     <li>{% call pdu_link(room_name, pdu_id) %}</li>
                     {% endfor %}
                 </ul>
