--- a/fluctlight-router/templates/base.html
+++ b/fluctlight-router/templates/base.html
@@ -3,10 +3,6 @@
     <head>
         <title>{% block title %}{% endblock %}</title>
         <style>
-            html {
-                background-color: #121212;
-                color: white;
-            }
             .pdu_id {
                 font-size: smaller;
                 font-family: monospace;
@@ -20,6 +16,19 @@
                 font-size: smaller;
                 color: darkred;
                 font-style: italic;
+            }
+
+            @media (prefers-color-scheme: dark) {
+                html {
+                    background-color: #121212;
+                    color: white;
+                }
+                .pdu_type {
+                    color: darkgray;
+                }
+                .unknown_pdu {
+                    color: darkred;
+                }
             }
         </style>
     </head>
